--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-#InitialItems, #MenuItems {
-  width: 400px;
-  height: 70px;
-  padding: 10px;
-  border: 1px solid #aaaaaa;
-  display: table-cell;
-}
-
 .food-item{
   width: 90%;
   height: 50px;
@@ -13,6 +5,14 @@
   padding: 7px;
   border: 1px solid #d3d3d3;
   background-color: #f1f1f1;
+}
+
+.food-item-set {
+  width: 90%;
+  height: 50px;
+  margin: 10px;
+  padding: 7px;
+  background-color: rgba(0,0,0,0);;
 }
 
 .food-item-title {
@@ -23,4 +23,23 @@
 .food-item-desc {
   margin: 2px;
   padding: 2px;
+}
+
+#InitialItems {
+  width: 400px;
+  height: 70px;
+  padding: 10px;
+  border: 1px solid #aaaaaa;
+  display: table-cell;
+}
+
+#MenuArea {
+  width: 1200px;
+  height: 1700px;
+  padding: 10px;
+  border: 1px solid #aaaaaa;
+  display: table-cell;
+  background-image: url(sample-menu.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
